--- a/man/rcdn.1
+++ b/man/rcdn.1
@@ -136,14 +136,33 @@ for more details.
 only remove the specified file(s)
 .El
 .
+
 .Sh ENVIRONMENT
 .Bl -tag -width ".Ev RCRC"
 .It Ev RCRC
-User configuration file. Defaults to
-.Pa ~/.rcrc .
+User configuration file. Overrides overrides the default locations as in section
+.Sx FILES
+below.
 .El
+
 .Sh FILES
-.Pa ~/.rcrc
+Unless overridden by the
+.Ev RCRC
+environment variable, rcm searches for its configuration file (rcrc) in the following
+locations, in this order:
+.Bl -enum -offset indent -compact
+.It
+$XDG_CONFIG_HOME/rcm/rcrc
+.It
+$x/rcm/rcrc for each directory x in $XDG_CONFIG_DIRS
+.It
+~/.rcrc
+.El
+If unset or empty,
+.Sx $XDG_CONFIG_HOME
+defaults to
+.Sy ~/.config
+
 .Sh EXAMPLES
 .Dl rcdn -v
 .Dl rcdn zshrc
