--- a/man/rcup.1
+++ b/man/rcup.1
@@ -134,7 +134,7 @@ only install the specified file(s)
 .Sh DIRECTORY LAYOUT
 Any non-dot non-meta file or directory under your dotfiles directory will be
 installed as a dotfile. For example,
-.Pa .dotfiles/zshrc
+.Pa $XDG_DATA_HOME/rcm/dotfiles/zshrc
 will be installed into
 .Pa ~/.zshrc
 \&.
@@ -154,7 +154,7 @@ hooks.
 Host-specific files go in a directory named for the host, prefixed with
 .Pa host- .
 For example,
-.Pa .dotfiles/host-scarlett
+.Pa $XDG_DATA_HOME/rcm/dotfiles/host-scarlett
 contains files specific to the computer with hostname
 .Pa scarlett ,
 and these files will only be installed on the computer with hostname
@@ -163,7 +163,7 @@ and these files will only be installed on the computer with hostname
 Tagged files go in a directory named for the tag, prefixed with
 .Li tag- .
 Therefore, files under
-.Pa .dotfiles/tag-git
+.Pa $XDG_DATA_HOME/rcm/dotfiles/tag-git
 are only installed when installing using the
 .Li git
 tag.
@@ -173,13 +173,13 @@ Hooks go in a directory named
 Two hooks are supported by
 .Nm rcup :
 pre-up and post-up. These go in files or directories with predictable filenames:
-.Pa .dotfiles/hooks/pre-up
+.Pa $XDG_DATA_HOME/rcm/dotfiles/hooks/pre-up
 and
-.Pa .dotfiles/hooks/post-up ,
+.Pa $XDG_DATA_HOME/rcm/dotfiles/hooks/post-up ,
 or
-.Pa .dotfiles/hooks/pre-up/*
+.Pa $XDG_DATA_HOME/rcm/dotfiles/hooks/pre-up/*
 and
-.Pa .dotfiles/hooks/post-up/* .
+.Pa $XDG_DATA_HOME/rcm/dotfiles/hooks/post-up/* .
 These files must be executable. They are run every time
 .Nm
 is run, and therefore must be idempotent.
@@ -203,7 +203,7 @@ The pre-up hook is run.
 .It
 All non-host, non-tag files without a dot prefix are symlinked to the
 dotted filename in your home directory. So,
-.Pa .dotfiles/tigrc
+.Pa $XDG_DATA_HOME/rcm/dotfiles/tigrc
 is
 symlinked to
 .Pa ~/.tigrc .
@@ -242,15 +242,55 @@ or from
 The post-up hook is run.
 .El
 .
+
 .Sh ENVIRONMENT
 .Bl -tag -width ".Ev RCRC"
 .It Ev RCRC
-User configuration file. Defaults to
-.Pa ~/.rcrc .
+User configuration file. Overrides overrides the default locations as in section
+.Sx FILES
+below.
 .El
 .Sh FILES
-.Pa ~/.dotfiles
-.Pa ~/.rcrc
+rcm has two file locations: a dotfiles directory, and a configuration file (rcrc).
+
+Unless overridden by the
+.Ev RCRC
+environment variable, rcm searches for its configuration file (rcrc) in the following
+locations, in this order:
+.Bl -enum -offset indent -compact
+.It
+$XDG_CONFIG_HOME/rcm/rcrc
+.It
+$x/rcm/rcrc for each directory x in $XDG_CONFIG_DIRS
+.It
+~/.rcrc
+.El
+If unset or empty,
+.Sx $XDG_CONFIG_HOME
+defaults to
+.Sy ~/.config
+
+Unless overridden by the
+.Fl d Ar DIR
+option to
+.Xr rcup 1
+or
+.Ev DOTFILES_DIRS
+in
+.Xr rcrc 5 ,
+rcm searches for its dotfiles directory in the following locations, in this order:
+.Bl -enum -offset indent -compact
+.It
+$XDG_DATA_HOME/rcm/rcrc
+.It
+$x/rcm/rcrc for each directory x in $XDG_DATA_DIRS
+.It
+~/.rcrc
+.El
+If unset or empty,
+.Sx $XDG_DATA_HOME
+defaults to
+.Sy ~/.local/share
 .Sh SEE ALSO
 .Xr lsrc 1 ,
 .Xr mkrc 1 ,
